--- a/frontend/angularMain/src/app/components/show-posts/show-posts.component.html
+++ b/frontend/angularMain/src/app/components/show-posts/show-posts.component.html
@@ -1,1 +1,14 @@
-<p>show-posts works!</p>
+<div class="wrapper">
+  <div class=main *ngIf="$posts | async as posts">
+    <div *ngFor="let post of posts | slice: lowValue : highValue">
+      <app-show-single-post [post]=post></app-show-single-post>
+      <br>
+    </div>
+    <mat-paginator class=paginator [length]="posts.length"
+                [pageSize]="10"
+                [pageSize]="pageSize"
+                (page)="getPaginatorData($event)">
+                aria-label="Select page">
+    </mat-paginator>
+  </div>
+</div>
