--- a/frontend/angularMain/src/app/pages/main-page/main-page.component.html
+++ b/frontend/angularMain/src/app/pages/main-page/main-page.component.html
@@ -1,5 +1,5 @@
 <div class="wrapper">
   <div class="header"><h1 style="text-align: center;">Welcome!</h1></div>
-  
-<app-post-text [category]="'main'"></app-post-text>
+  <app-show-posts [category]="'main'"></app-show-posts>
+  <app-post-text [category]="'main'"></app-post-text>
 </div>
