Refactoring + changes in routing

--- a/frontend/angularMain/src/app/app.component.html
+++ b/frontend/angularMain/src/app/app.component.html
@@ -2,22 +2,22 @@
   <mat-icon>menu</mat-icon>
 </button>
 <ng-template #loginButton>
-  <button mat-mini-fab id=loginButton color="primary" (click)="loginNav.toggle()">Login</button>
+  <button mat-mini-fab id=loginButton color="primary" (click)="loginNav.toggle()" [routerLink]="[{ outlets: { userSidebar: ['Login'] } }]">Login</button>
 </ng-template>
 <ng-container *ngIf="(user$ | async) as user else loginButton">
-  <button mat-mini-fab id=loginButton color="primary" (click)="loginNav.toggle()">User</button>
+  <button mat-mini-fab id=loginButton color="primary" (click)="loginNav.toggle()" [routerLink]="[{ outlets: { userSidebar: ['UserPage'] } }]">User</button>
 </ng-container>
 
 <mat-sidenav-container class="sidenav-container">
-  <mat-sidenav #sideNav mode="over"><app-side-nav></app-side-nav></mat-sidenav>
-  <mat-sidenav-content><router-outlet></router-outlet></mat-sidenav-content>
+  <mat-sidenav #sideNav mode="over">
+    <app-side-nav></app-side-nav>
+  </mat-sidenav>
+  <mat-sidenav-content>
+    <router-outlet name="primary"></router-outlet>
+  </mat-sidenav-content>
 
     <mat-sidenav #loginNav mode="over" position="end">
-      <ng-container *ngIf="(user$ | async) as user; else login"><app-user-page></app-user-page></ng-container>
-      <ng-template #login><app-login-page></app-login-page>
-
-      </ng-template>
-
+        <router-outlet name="userSidebar"></router-outlet>
     </mat-sidenav>
 
 </mat-sidenav-container>
