--- a/frontend/angularMain/src/styles.css
+++ b/frontend/angularMain/src/styles.css
@@ -5,3 +5,10 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .mat-primary {
   color: #3f51b5;
  }
+
+ .header{
+  width: 100%;
+  text-align: center;
+  margin: 10px;
+  padding: 10px;
+}
