adding link  in mainpage to javagames

--- a/frontend/angularMain/src/app/pages/mainpages/side-nav/side-nav.component.html
+++ b/frontend/angularMain/src/app/pages/mainpages/side-nav/side-nav.component.html
@@ -2,4 +2,5 @@
   <button class="sideNavButton" mat-button color="accent" [routerLink]="['/']" routerLinkActive="active">Home</button>
   <button class="sideNavButton" mat-button color="accent" [routerLink]="['/Info']"  routerLinkActive="active">Info</button>
   <button class="sideNavButton" mat-button color="accent" [routerLink]="['/Guestbook']"  routerLinkActive="active">Guestbook</button>
+  <button class="sideNavButton" mat-button color="accent" [routerLink]="['/Javagames']"  routerLinkActive="active">Java games</button>
 </div>
