changes in javagames component

--- a/frontend/angularMain/src/app/pages/javagames/javagames.component.html
+++ b/frontend/angularMain/src/app/pages/javagames/javagames.component.html
@@ -1,3 +1,3 @@
 <p>javagames works!</p>
 
-<div ng-include="https://sjo0911.herokuapp.com/javagames/memorygame/"></div>
+<div ng-include="'http://sjo0911.herokuapp.com/javagames/memorygame/'"></div>
