added whack a mole game

--- a/frontend/angularMain/src/app/pages/javagames/javagames.component.html
+++ b/frontend/angularMain/src/app/pages/javagames/javagames.component.html
@@ -1,3 +1,29 @@
-<p>javagames works!</p>
+<div class="wrapper">
+  <div class="header"><h1 style="text-align: center;">Javagames</h1></div>
+  <div class="carddiv">
+    <mat-card class=card>
+      <mat-card-content class=content>Några Javaspel skapade från tutorial. <br>Länk för dig som är intresserad: <a href="https://www.youtube.com/watch?v=lhNdUVh3qCc">Learn JavaScript by Building 7 Games - Full Course</a></mat-card-content>
+    </mat-card>
+  </div>
+  <br>
+  <div class="header"><h2 style="text-align: center;">Memory</h2></div>
+  <div class="game">
+    <iframe id="Example"
+      title="Example"
+      width="420"
+      height="400"
+      src="http://sjo0911.herokuapp.com/javagames/memorygame/">
+  </iframe>
+  </div>
+  <br>
+  <div class="header"><h2 style="text-align: center;">Whack a mole</h2></div>
+  <div class="game">
+    <iframe id="Example"
+      title="Example"
+      width="600"
+      height="600"
+      src="http://sjo0911.herokuapp.com/javagames/whackamole/">
+  </iframe>
+  </div>
 
-<div ng-include="'http://sjo0911.herokuapp.com/javagames/memorygame/'"></div>
+</div>
