added four in a row

--- a/frontend/angularMain/src/app/pages/javagames/javagames.component.html
+++ b/frontend/angularMain/src/app/pages/javagames/javagames.component.html
@@ -8,8 +8,8 @@
   <br>
   <div class="header"><h2 style="text-align: center;">Memory</h2></div>
   <div class="game">
-    <iframe id="Example"
-      title="Example"
+    <iframe id="memorygame"
+      title="memorygame"
       width="420"
       height="400"
       src="http://sjo0911.herokuapp.com/javagames/memorygame/">
@@ -18,12 +18,21 @@
   <br>
   <div class="header"><h2 style="text-align: center;">Whack a mole</h2></div>
   <div class="game">
-    <iframe id="Example"
-      title="Example"
-      width="600"
-      height="600"
+    <iframe id="whackamole"
+      title="whackamole"
+      width="650"
+      height="800"
       src="http://sjo0911.herokuapp.com/javagames/whackamole/">
   </iframe>
   </div>
-
+  <br>
+  <div class="header"><h2 style="text-align: center;">Fyra i rad</h2></div>
+  <div class="game">
+    <iframe id="fourinarow"
+      title="Fyra i rad"
+      width="400"
+      height="300"
+      src="http://sjo0911.herokuapp.com/javagames/connectfour/">
+  </iframe>
+  </div>
 </div>
