--- a/frontend/angularMain/src/app/pages/mainpages/side-nav/side-nav.component.html
+++ b/frontend/angularMain/src/app/pages/mainpages/side-nav/side-nav.component.html
@@ -2,8 +2,8 @@
   <button class="sideNavButton" mat-button color="accent" [routerLink]="['/']" routerLinkActive="active">Home</button>
   <button class="sideNavButton" mat-button color="accent" [routerLink]="['/Info']"  routerLinkActive="active">Info</button>
   <button class="sideNavButton" mat-button color="accent" [routerLink]="['/Guestbook']"  routerLinkActive="active">Guestbook</button>
-  <button class="sideNavButton" mat-button color="accent" onclick="toggleScoolwork()">Schoolwork</button>
-  <ng-container *ngIf=showSchoolWork>
+  <button class="sideNavButton" mat-button color="accent" (click)="toggleScoolwork()">Schoolwork</button>
+  <ng-container *ngIf="showSchoolWork">
     <button class="sideNavButton" mat-button color="accent" [routerLink]="['/JavaEEEshop']"  routerLinkActive="active">EShop i javaEE och jsf</button>
   </ng-container>
   <button class="sideNavButton" mat-button color="accent" [routerLink]="['/Javagames']"  routerLinkActive="active">Java games</button>
