--- a/frontend/angularMain/src/app/pages/schoolwork/javaee-eshop/javaee-eshop.component.html
+++ b/frontend/angularMain/src/app/pages/schoolwork/javaee-eshop/javaee-eshop.component.html
@@ -6,8 +6,9 @@
          <br> Var endel utmaningar med javas legacy system och Eshopen hade behövt läggas lite mer tid på.
          <br>Länk till sidan: <a href="http://sjo0911wildfly.herokuapp.com/eshopjsf/index.xhtml">Java EE Webshop</a></mat-card-content>
     </mat-card>
+  </div>
     <br>
-    <div class="header"><h2 style="text-align: center;">Memory</h2></div>
+    <div class="header"><h2 style="text-align: center;">Eshop i javaEE och jsf</h2></div>
     <div class="eshop">
       <iframe id="Eshop"
         title="Eshop"
@@ -16,6 +17,6 @@
         src="http://sjo0911wildfly.herokuapp.com/eshopjsf/index.xhtml">
     </iframe>
     </div>
-  </div>
+
   <br>
 </div>
