--- a/frontend/angularMain/src/app/pages/mainpages/side-nav/side-nav.component.css
+++ b/frontend/angularMain/src/app/pages/mainpages/side-nav/side-nav.component.css
@@ -1,10 +1,16 @@
 .wrapper {
   display: flex;
   flex-direction: column;
+  align-items: flex-start;
   margin-top: 50px;
 }
 
 .sideNavButton {
+  float: left;
   margin: 5px;
   padding: 5px;
+}
+
+.schoolworkdiv {
+  margin-left: 20px;
 }
