added snake game

--- a/frontend/angularMain/src/app/pages/javagames/javagames.component.html
+++ b/frontend/angularMain/src/app/pages/javagames/javagames.component.html
@@ -30,9 +30,19 @@
   <div class="game">
     <iframe id="fourinarow"
       title="Fyra i rad"
-      width="400"
-      height="300"
+      width="200"
+      height="200"
       src="http://sjo0911.herokuapp.com/javagames/connectfour/">
+  </iframe>
+  </div>
+  <br>
+  <div class="header"><h2 style="text-align: center;">Snake</h2></div>
+  <div class="game">
+    <iframe id="fourinarow"
+      title="Fyra i rad"
+      width="200"
+      height="200"
+      src="http://sjo0911.herokuapp.com/javagames/snake/">
   </iframe>
   </div>
 </div>
