added space invaders

--- a/frontend/angularMain/src/app/pages/javagames/javagames.component.html
+++ b/frontend/angularMain/src/app/pages/javagames/javagames.component.html
@@ -31,7 +31,7 @@
     <iframe id="fourinarow"
       title="Fyra i rad"
       width="200"
-      height="200"
+      height="250"
       src="http://sjo0911.herokuapp.com/javagames/connectfour/">
   </iframe>
   </div>
@@ -40,9 +40,19 @@
   <div class="game">
     <iframe id="fourinarow"
       title="Fyra i rad"
-      width="200"
-      height="200"
+      width="250"
+      height="350"
       src="http://sjo0911.herokuapp.com/javagames/snake/">
+  </iframe>
+  </div>
+  <br>
+  <div class="header"><h2 style="text-align: center;">Snake</h2></div>
+  <div class="game">
+    <iframe id="fourinarow"
+      title="Fyra i rad"
+      width="400"
+      height="400"
+      src="http://sjo0911.herokuapp.com/javagames/spaceinvader/">
   </iframe>
   </div>
 </div>
